1.4.19
 * #259: Optionally change the internal database dump path via "borgmatic_source_directory" option
   in location configuration section.
 * #271: Support piping "borgmatic list" output to grep by logging certain log levels to console
   stdout and others to stderr.
 * Retain colored output when piping or redirecting output in an interactive terminal.
 * Add end-to-end tests for database dump and restore.

1.4.18
 * Fix "--repository" flag to accept relative paths.
 * Fix "borgmatic umount" so it only runs Borg once instead of once per repository / configuration
   file.
 * #253: Mount whole repositories via "borgmatic mount" without any "--archive" flag.
 * #269: Filter listed paths via "borgmatic list --path" flag.

1.4.17
 * #235: Pass extra options directly to particular Borg commands, handy for Borg options that
   borgmatic does not yet support natively. Use "extra_borg_options" in the storage configuration
   section.
 * #266: Attempt to repair any inconsistencies found during a consistency check via
   "borgmatic check --repair" flag.

1.4.16
 * #256: Fix for "before_backup" hook not triggering an error when the command contains "borg" and
   has an exit code of 1.
 * #257: Fix for garbled Borg file listing when using "borgmatic create --progress" with
   verbosity level 1 or 2.
 * #260: Fix for missing Healthchecks monitoring payload or HTTP 500 due to incorrect unicode
   encoding.

1.4.15
 * Fix for database dump removal incorrectly skipping some database dumps.
 * #123: Support for mounting an archive as a FUSE filesystem via "borgmatic mount" action, and
   unmounting via "borgmatic umount". See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/extract-a-backup/#mount-a-filesystem

1.4.14
 * Show summary log errors regardless of verbosity level, and log the "summary:" header with a log
   level based on the contained summary logs.

1.4.13