@@ -11,7 +11,7 @@ whitelist_externals =
     find
     sh
 commands_pre =
-    find {toxinidir} -type f -not -path '{toxinidir}/.tox/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
+    find {envdir} -type f -not -path '*/__pycache__/*' -name '*.py[c|o]' -delete
 commands =
     pytest {posargs}
     py36,py37,py38: black --check .
